<?xml version="1.0"?>
<package format="2">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>
    TODO: Package description
  </description>

  <maintainer email="my_email@email.com">Troy Fider</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime & build dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Export -->
  <export>
    <!-- catkin packages do not require a build_type tag -->
  </export>
</package>
